SET(REPLACER_VERSION_MAJOR 1)
SET(REPLACER_VERSION_MINOR 2)
SET(REPLACER_VERSION_PATCH 0)
SET(REPLACER_VERSION "${REPLACER_VERSION_MAJOR}.${REPLACER_VERSION_MINOR}.${REPLACER_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-DREPLACER_VERSION="${REPLACER_VERSION}")

SET(REPLACER_HDRS
	cconsole.h
	cpireplace.h
	creplacer.h
	creplacerworker.h
)

SET(REPLACER_SRCS
	cconsole.cpp
	cpireplace.cpp
	creplacer.cpp
	creplacerworker.cpp
)

ADD_LIBRARY(libreplacer_pi MODULE ${REPLACER_SRCS})
SET_TARGET_PROPERTIES(libreplacer_pi PROPERTIES OUTPUT_NAME "replacer_pi")

INSTALL(TARGETS libreplacer_pi LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
