SET(STATS_VERSION_MAJOR 1)
SET(STATS_VERSION_MINOR 2)
SET(STATS_VERSION_PATCH 0)
SET(STATS_VERSION "${STATS_VERSION_MAJOR}.${STATS_VERSION_MINOR}.${STATS_VERSION_PATCH}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-DSTATS_VERSION="${STATS_VERSION}")

SET(STATS_HDRS
	cpistats.h
	cstats.h
)

SET(STATS_SRCS
	cpistats.cpp
	cstats.cpp
)

ADD_LIBRARY(libstats_pi MODULE ${STATS_SRCS})
SET_TARGET_PROPERTIES(libstats_pi PROPERTIES OUTPUT_NAME "stats_pi")

INSTALL(TARGETS libstats_pi LIBRARY DESTINATION lib)
